10/2/2013 Added basic project structure.
10/2/2013 Repository created.